--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,13 @@ th {
   td, th {
     vertical-align: middle;
   }
+  .table-primary {
+    --bs-table-bg: #F4F2FF;
+    --bs-table-hover-bg: #F4f2ff;
+  }
+  .table {
+    --bs-table-hover-bg: #F4f2ff;
+  }
   .fs-6 {
     font-size: 6px !important;
   }
